// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  User
  Admin
}

enum subsidyStatus {
  Abolition
  Continuation
}

enum informationImportance {
  High
  Middle
  Low
}

// お知らせ
model Information {
  id         Int      @id @default(autoincrement())
  title      String
  body       String
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  importance informationImportance @default(Low)
  authorId   Int
  author     User @relation(fields: [authorId], references: [id])
}

// ユーザー
model User {
  id             Int      @id @default(autoincrement())
  email          String   @unique
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  hashedPassword String
  answers        Answer[]
  role           Role     @default(User)
  information    Information[]
}

// 市町区村
model Municipality {
  id                  Int        @id @default(autoincrement())
  createdAt           DateTime   @default(now())
  updatedAt           DateTime   @updatedAt
  name                String     @unique
  municipalSymbolPath String
  isSupported         Boolean    @default(false)
  prefectureId        Int
  prefecture          Prefecture @relation(fields: [prefectureId], references: [id])
  subsidies           Subsidy[]
}

// 都道府県
model Prefecture {
  id             Int            @id @default(autoincrement())
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt
  name           String         @unique
  municipalities Municipality[]
}

// 助成金
model Subsidy {
  id                      Int           @id @default(autoincrement())
  name                    String        @unique
  deadlineForReceipt      Int // 受給期限
  ageLimit                String // 年齢制限
  amountReceived          Int[] // 受給額
  applicationAddress      String // 申請先
  applicationMethod       String // 申請方法
  applicationRequirements String // 申請条件
  description             String // 説明
  status                  subsidyStatus @default(Continuation) // 助成金の更新・廃止などの状態
  municipalityId          Int
  createdAt               DateTime      @default(now())
  updatedAt               DateTime      @updatedAt
  questions               Question[]
  municipality            Municipality  @relation(fields: [municipalityId], references: [id])
  eligibilityRequirements Json
  answers                 Answer[]
}

// 一問一答の質問
model Question {
  id         Int      @id @default(autoincrement())
  answerType String // YesとNoで答えられる質問か、数値など具体的な回答を要する質問なのか
  text       String // 質問文
  subsidyId  Int
  subsidy    Subsidy  @relation(fields: [subsidyId], references: [id])
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
}

// ユーザーの答えを保存するテーブル
model Answer {
  id         Int      @id @default(autoincrement())
  subsidyId  Int
  subsidy    Subsidy  @relation(fields: [subsidyId], references: [id])
  user       User     @relation(fields: [userId], references: [id])
  userId     Int
  createdAt  DateTime @default(now())
  answers    Json
}